# boost_geometric

./: CMakeLists.txt  main_3d_point_query.cxx  main_d_dimensional_query.cxx  main_point_query.cxx  main_pt_search_circular_query.cxx  main_pt_search_with_info.cxx  main_quickstart.cxx
